// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"external \\\\\\"fs\\\\\\"\\": 66,
      \\"external \\\\\\"path\\\\\\"\\": 589,
      \\"ignored  pkgs/somepackage/foo\\": 760,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      66,
      316,
      589,
      760
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"dependencies sync /^\\\\\\\\.\\\\\\\\/.*$/\\": 154,
      \\"dependencies/bar.js\\": 853,
      \\"dependencies/foo.js\\": 494,
      \\"external \\\\\\"fs\\\\\\"\\": 66,
      \\"external \\\\\\"path\\\\\\"\\": 589,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      66,
      154,
      316,
      494,
      589,
      853
    ]
  }
}"
`;
